# GraphicsAndDataVisualization

./: .gitignore  README.md
practica0/CubGL/: Common.h
practica0/CubGPU/: Common.h  CubGPU.pro  cub.cpp  glwidget.cpp
practica0/CubGPUTextures/: Common.h  CubGPUTextures.pro  cub.cpp  cub.h  glwidget.cpp  glwidget.h  mainwindow.cpp  tetraedre.cpp  tetraedre.h
practica1/src/: cara.cpp  glwidget.cpp  glwidget.h  llum.cpp  llum.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  material.cpp  material.h  mon.cpp  mon.h  objecte.cpp  objecte.h  resources.qrc
practica1/src/resources/: fshaderBump.glsl  fshaderEnvironmental.glsl  fshaderGouraud.glsl  fshaderGouraudTextura.glsl  fshaderPhong.glsl  fshaderPhongTextura.glsl  fshaderToon.glsl  vshader1.glsl  vshaderEnvironmental.glsl  vshaderGouraud.glsl  vshaderGouraudTextura.glsl  vshaderPhong.glsl  vshaderToon.glsl
practica2/: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Object.cpp  Object.h  Ray.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  llum.cpp  llum.h  practica2Test.pro
practica2/glm/: .gitignore
